aws_configs/NetworkAcls-us-west-2.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-0af26c74", 
     "NetworkAclId": "acl-da5bf1a3", 
     "SubnetId": "subnet-ca086282"
    }
   ], 
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }
   ], 
   "IsDefault": true, 
   "NetworkAclId": "acl-da5bf1a3", 
   "Tags": [], 
   "VpcId": "vpc-f6c5c790"
  }, 
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-1f248c78", 
     "NetworkAclId": "acl-4db39c28", 
     "SubnetId": "subnet-1f315846"
    }, 
    {
     "NetworkAclAssociationId": "aclassoc-1d248c7a", 
     "NetworkAclId": "acl-4db39c28", 
     "SubnetId": "subnet-9c8adceb"
    }, 
    {
     "NetworkAclAssociationId": "aclassoc-1e248c79", 
     "NetworkAclId": "acl-4db39c28", 
     "SubnetId": "subnet-d9cafabc"
    }
   ], 
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }, 
    {
     "CidrBlock": "162.243.144.192/32", 
     "Egress": false, 
     "PortRange": {
      "From": 3306, 
      "To": 3306
     }, 
     "Protocol": "6", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "PortRange": {
      "From": 22, 
      "To": 22
     }, 
     "Protocol": "6", 
     "RuleAction": "allow", 
     "RuleNumber": 150
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }
   ], 
   "IsDefault": true, 
   "NetworkAclId": "acl-4db39c28", 
   "Tags": [], 
   "VpcId": "vpc-f8fad69d"
  }, 
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-d52a92ab", 
     "NetworkAclId": "acl-2635945f", 
     "SubnetId": "subnet-72004214"
    }
   ], 
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }
   ], 
   "IsDefault": true, 
   "NetworkAclId": "acl-2635945f", 
   "Tags": [], 
   "VpcId": "vpc-5e4c7738"
  }, 
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-7a933f04", 
     "NetworkAclId": "acl-1ced2265", 
     "SubnetId": "subnet-9a0c48fc"
    }
   ], 
   "Entries": [
    {
     "CidrBlock": "10.10.0.0/16", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "10.1.0.0/16", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 200
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 300
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }, 
    {
     "CidrBlock": "10.10.0.0/16", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "10.1.0.0/16", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 200
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 300
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }
   ], 
   "IsDefault": true, 
   "NetworkAclId": "acl-1ced2265", 
   "Tags": [
    {
     "Key": "Name", 
     "Value": "GNS3-BGP-Test"
    }
   ], 
   "VpcId": "vpc-815775e7"
  }, 
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-460c9238", 
     "NetworkAclId": "acl-7e00aa07", 
     "SubnetId": "subnet-be7a10f6"
    }, 
    {
     "NetworkAclAssociationId": "aclassoc-490c9237", 
     "NetworkAclId": "acl-7e00aa07", 
     "SubnetId": "subnet-3e7e3458"
    }, 
    {
     "NetworkAclAssociationId": "aclassoc-b00f91ce", 
     "NetworkAclId": "acl-7e00aa07", 
     "SubnetId": "subnet-a9660ce1"
    }, 
    {
     "NetworkAclAssociationId": "aclassoc-d40d93aa", 
     "NetworkAclId": "acl-7e00aa07", 
     "SubnetId": "subnet-f979339f"
    }
   ], 
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": true, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "allow", 
     "RuleNumber": 100
    }, 
    {
     "CidrBlock": "0.0.0.0/0", 
     "Egress": false, 
     "Protocol": "-1", 
     "RuleAction": "deny", 
     "RuleNumber": 32767
    }
   ], 
   "IsDefault": true, 
   "NetworkAclId": "acl-7e00aa07", 
   "Tags": [], 
   "VpcId": "vpc-50fffd36"
  }
 ]
}
