aws_configs/SecurityGroups-us-west-2.json
{
 "SecurityGroups": [
  {
   "Description": "Elastic search runs here", 
   "GroupId": "sg-2a5bbf56", 
   "GroupName": "ElasticSearchSG", 
   "IpPermissions": [], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "Tags": [
    {
     "Key": "Name", 
     "Value": "ElasticSearch"
    }
   ], 
   "VpcId": "vpc-f6c5c790"
  }, 
  {
   "Description": "Access to the load balancer that sits in front of ECS", 
   "GroupId": "sg-323add4e", 
   "GroupName": "toast-SecurityGroups-1587GSDPLKLUH-LoadBalancerSecurityGroup-TWLDBR2RRJ09", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-953bdce9", 
       "UserId": "118292266645"
      }
     ]
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "Tags": [
    {
     "Key": "aws:cloudformation:stack-id", 
     "Value": "arn:aws:cloudformation:us-west-2:118292266645:stack/toast-SecurityGroups-1587GSDPLKLUH/c00a8e00-ce67-11e7-bea6-503aca41a061"
    }, 
    {
     "Key": "aws:cloudformation:stack-name", 
     "Value": "toast-SecurityGroups-1587GSDPLKLUH"
    }, 
    {
     "Key": "aws:cloudformation:logical-id", 
     "Value": "LoadBalancerSecurityGroup"
    }, 
    {
     "Key": "Name", 
     "Value": "toast-LoadBalancers"
    }
   ], 
   "VpcId": "vpc-50fffd36"
  }, 
  {
   "Description": "default VPC security group", 
   "GroupId": "sg-55510831", 
   "GroupName": "default", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-f8fad69d"
  }, 
  {
   "Description": "default VPC security group", 
   "GroupId": "sg-563dda2a", 
   "GroupName": "default", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-563dda2a", 
       "UserId": "118292266645"
      }
     ]
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-50fffd36"
  }, 
  {
   "Description": "default VPC security group", 
   "GroupId": "sg-5f5cb823", 
   "GroupName": "default", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-5f5cb823", 
       "UserId": "118292266645"
      }
     ]
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-f6c5c790"
  }, 
  {
   "Description": "Security group for probe", 
   "GroupId": "sg-647f7019", 
   "GroupName": "probe-SG", 
   "IpPermissions": [
    {
     "FromPort": 80, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 80, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 22, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "38.140.26.42/32"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 22, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 443, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 443, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "Tags": [
    {
     "Key": "Name", 
     "Value": "probe-SG"
    }
   ], 
   "VpcId": "vpc-5e4c7738"
  }, 
  {
   "Description": "Access to the ECS hosts and the tasks/containers that run on them", 
   "GroupId": "sg-953bdce9", 
   "GroupName": "toast-SecurityGroups-1587GSDPLKLUH-ECSHostSecurityGroup-11PTLQU56C6O6", 
   "IpPermissions": [
    {
     "FromPort": 22, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 22, 
     "UserIdGroupPairs": []
    }, 
    {
     "FromPort": 9997, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 9997, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "Tags": [
    {
     "Key": "aws:cloudformation:stack-name", 
     "Value": "toast-SecurityGroups-1587GSDPLKLUH"
    }, 
    {
     "Key": "aws:cloudformation:stack-id", 
     "Value": "arn:aws:cloudformation:us-west-2:118292266645:stack/toast-SecurityGroups-1587GSDPLKLUH/c00a8e00-ce67-11e7-bea6-503aca41a061"
    }, 
    {
     "Key": "aws:cloudformation:logical-id", 
     "Value": "ECSHostSecurityGroup"
    }, 
    {
     "Key": "Name", 
     "Value": "toast-ECS-Hosts"
    }
   ], 
   "VpcId": "vpc-50fffd36"
  }, 
  {
   "Description": "Created from the RDS Management Console", 
   "GroupId": "sg-9a1f3ffe", 
   "GroupName": "rds-launch-wizard", 
   "IpPermissions": [
    {
     "FromPort": 3306, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 3306, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-f8fad69d"
  }, 
  {
   "Description": "default VPC security group", 
   "GroupId": "sg-ac636cd1", 
   "GroupName": "default", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-ac636cd1", 
       "UserId": "118292266645"
      }
     ]
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-5e4c7738"
  }, 
  {
   "Description": "default VPC security group", 
   "GroupId": "sg-adcd87d0", 
   "GroupName": "default", 
   "IpPermissions": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "Tags": [
    {
     "Key": "Name", 
     "Value": "GNS3-BGP-Test-Default"
    }
   ], 
   "VpcId": "vpc-815775e7"
  }, 
  {
   "Description": "allow ssh into the instances", 
   "GroupId": "sg-bea497c3", 
   "GroupName": "withssh", 
   "IpPermissions": [
    {
     "FromPort": 22, 
     "IpProtocol": "tcp", 
     "IpRanges": [
      {
       "CidrIp": "38.140.26.42/32"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "ToPort": 22, 
     "UserIdGroupPairs": []
    }
   ], 
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1", 
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ], 
     "Ipv6Ranges": [], 
     "PrefixListIds": [], 
     "UserIdGroupPairs": []
    }
   ], 
   "OwnerId": "118292266645", 
   "VpcId": "vpc-f8fad69d"
  }
 ]
}
